import salaries data file

--- a/data-report.ipynb
+++ b/data-report.ipynb
@@ -6,8 +6,380 @@
    "source": [
     "# 数据报告\n",
     "\n",
-    "问题：薪水高的棒球运动员都有什么特点\n",
-    "\n"
+    "## 问题：棒球运动员的薪水和哪些因素有关\n",
+    "\n",
+    "我们假定棒球运动员的薪水与以下几个因素密切相关\n",
+    "\n",
+    "- 时间（以年份计算）\n",
+    "\n",
+    "- 年龄\n",
+    "\n",
+    "- 出场次数\n",
+    "\n",
+    "- 场上表现（击球，防守）\n",
+    "\n",
+    "- 管理者的薪水和排名\n",
+    "\n",
+    "- 球队\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##  1. 球员薪水随时间变化\n",
+    "\n",
+    "### 1.1 导入`Salaries.csv`数据"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "\n",
+    "# mastersFileName = './baseballdatabank-2017.1/core/Master.csv'\n",
+    "# mastersDF = pd.read_csv(mastersFileName)\n",
+    "# mastersDF.head()\n",
+    "\n",
+    "salariesFileName = './baseballdatabank-2017.1/core/Salaries.csv'\n",
+    "salariesDF = pd.read_csv(salariesFileName)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "yearID       int64\n",
+       "teamID      object\n",
+       "lgID        object\n",
+       "playerID    object\n",
+       "salary       int64\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 查看每一列的数据类型\n",
+    "salariesDF.dtypes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>yearID</th>\n",
+       "      <th>teamID</th>\n",
+       "      <th>lgID</th>\n",
+       "      <th>playerID</th>\n",
+       "      <th>salary</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1985</td>\n",
+       "      <td>ATL</td>\n",
+       "      <td>NL</td>\n",
+       "      <td>barkele01</td>\n",
+       "      <td>870000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1985</td>\n",
+       "      <td>ATL</td>\n",
+       "      <td>NL</td>\n",
+       "      <td>bedrost01</td>\n",
+       "      <td>550000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1985</td>\n",
+       "      <td>ATL</td>\n",
+       "      <td>NL</td>\n",
+       "      <td>benedbr01</td>\n",
+       "      <td>545000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1985</td>\n",
+       "      <td>ATL</td>\n",
+       "      <td>NL</td>\n",
+       "      <td>campri01</td>\n",
+       "      <td>633333</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1985</td>\n",
+       "      <td>ATL</td>\n",
+       "      <td>NL</td>\n",
+       "      <td>ceronri01</td>\n",
+       "      <td>625000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   yearID teamID lgID   playerID  salary\n",
+       "0    1985    ATL   NL  barkele01  870000\n",
+       "1    1985    ATL   NL  bedrost01  550000\n",
+       "2    1985    ATL   NL  benedbr01  545000\n",
+       "3    1985    ATL   NL   campri01  633333\n",
+       "4    1985    ATL   NL  ceronri01  625000"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 查看前几行数据\n",
+    "salariesDF.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>yearID</th>\n",
+       "      <th>salary</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>26428.000000</td>\n",
+       "      <td>2.642800e+04</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>2000.878727</td>\n",
+       "      <td>2.085634e+06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>8.909314</td>\n",
+       "      <td>3.455348e+06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>1985.000000</td>\n",
+       "      <td>0.000000e+00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>1994.000000</td>\n",
+       "      <td>2.947020e+05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>2001.000000</td>\n",
+       "      <td>5.500000e+05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>2009.000000</td>\n",
+       "      <td>2.350000e+06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>2016.000000</td>\n",
+       "      <td>3.300000e+07</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             yearID        salary\n",
+       "count  26428.000000  2.642800e+04\n",
+       "mean    2000.878727  2.085634e+06\n",
+       "std        8.909314  3.455348e+06\n",
+       "min     1985.000000  0.000000e+00\n",
+       "25%     1994.000000  2.947020e+05\n",
+       "50%     2001.000000  5.500000e+05\n",
+       "75%     2009.000000  2.350000e+06\n",
+       "max     2016.000000  3.300000e+07"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 描述数据分布情况\n",
+    "salariesDF.describe()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1.2 整理`Salaries.csv`数据\n",
+    "\n",
+    "查看薪水数据里面有没有null值："
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "yearID      0\n",
+       "teamID      0\n",
+       "lgID        0\n",
+       "playerID    0\n",
+       "salary      0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.isnull(salariesDF).sum()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "由于没有发现null值，我们无需对这种情况进行任何处理。\n",
+    "\n",
+    "接下来，检查薪水数据里面有没有0或者负数："
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>yearID</th>\n",
+       "      <th>teamID</th>\n",
+       "      <th>lgID</th>\n",
+       "      <th>playerID</th>\n",
+       "      <th>salary</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>6179</th>\n",
+       "      <td>1993</td>\n",
+       "      <td>NYA</td>\n",
+       "      <td>AL</td>\n",
+       "      <td>jamesdi01</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12007</th>\n",
+       "      <td>1999</td>\n",
+       "      <td>PIT</td>\n",
+       "      <td>NL</td>\n",
+       "      <td>martija02</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       yearID teamID lgID   playerID  salary\n",
+       "6179     1993    NYA   AL  jamesdi01       0\n",
+       "12007    1999    PIT   NL  martija02       0"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "salariesDF[salariesDF[\"salary\"] <= 0]"
    ]
   }
  ],
